--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,8 @@
 version: 0.2
+env:
+    secrets-manager:
+      TOKEN: firstsecret:tokenforsonar
 phases:
-  install:
-    runtime-versions:
-      java: latest
   build:
     commands:
-      - mvn verify sonar:sonar -Dsonar.projectKey=daya_javaproject11 -Dsonar.organization=daya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=4e9924f045694c43141c76cf30af913c0f2fccca 
+      - mvn verify sonar:sonar -Dsonar.projectKey=daya_javaproject11 -Dsonar.organization=daya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$TOKEN 
